--- a/01_初识Vue/初识Vue.html
+++ b/01_初识Vue/初识Vue.html
@@ -24,7 +24,7 @@
                         //el:'.root'
             data:{ //data中用于存储数据，数据供el指定的容器去使用，此值这里暂写成对象
                 name:'Zoyui',
-                address:'尚硅谷'
+                address:'Your World'
             }
         })
     </script>
